# artemis-gtk

./: .gitignore  build.sh  com.k0vcz.artemis.json  meson.build
blueprint/: add_spot_page.blp  main_window.blp  meson.build  preferences.blp  spot_card.blp  spot_history_dialog.blp  spot_page.blp  status_page.blp
data/: artemis.gresource.xml  artemis.gresource.xml.in  com.k0vcz.artemis.appdata.xml.in  com.k0vcz.artemis.desktop.in  com.k0vcz.artemis.gschema.xml  com.k0vcz.artemis.metainfo.xml.in  meson.build
data/css/: style.css
data/icons/: meson.build
po/: POTFILES
src/: activator.c  activator.h  artemis.c  artemis.h  avatar.c  avatar.h  config.h.in  database.c  database.h  dex_soup.c  dex_soup.h  logbook.c  logbook.h  logbook_qrz.c  logbook_qrz.h  main.c  pota_client.c  pota_client.h  pota_user_cache.c  pota_user_cache.h  preferences.c  preferences.h  radio_control.c  radio_control.h  radio_models.h  spot.c  spot.h  spot_card.c  spot_card.h  spot_history_dialog.c  spot_history_dialog.h  spot_page.c  spot_page.h  spot_repo.c  spot_repo.h  status_page.c  status_page.h  utils.c  utils.h
test/: radio_test
test/src/: radio_test_harness.c
