# Install symbolic icons
install_data(
  [
    'hicolor/scalable/actions/symbolic/update-symbolic.svg',
    'hicolor/scalable/actions/symbolic/history-undo-symbolic.svg',
    'hicolor/scalable/actions/symbolic/bullseye-symbolic.svg',
    'hicolor/scalable/actions/symbolic/test-pass-symbolic.svg',
    'hicolor/scalable/actions/symbolic/radio-console-symbolic.svg',
    'hicolor/scalable/actions/symbolic/sound-wave-alt-symbolic.svg',
  ],
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Install status icons
install_data(
  [
    'hicolor/scalable/status/band-All.svg',
    'hicolor/scalable/status/band-160m.svg',
    'hicolor/scalable/status/band-80m.svg',
    'hicolor/scalable/status/band-60m.svg',
    'hicolor/scalable/status/band-40m.svg',
    'hicolor/scalable/status/band-30m.svg',
    'hicolor/scalable/status/band-20m.svg',
    'hicolor/scalable/status/band-17m.svg',
    'hicolor/scalable/status/band-15m.svg',
    'hicolor/scalable/status/band-12m.svg',
    'hicolor/scalable/status/band-10m.svg',
    'hicolor/scalable/status/band-6m.svg',
    'hicolor/scalable/status/band-2m.svg',
  ],
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'status'
)